namespace UnoGame.Interfaces
{
    public interface IPlayer
    {
        int Id { get; }
        string Name { get; }
    }
}